--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     margin: 10px;
     height: 100px;
     width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 button{
