--- a/style.css
+++ b/style.css
@@ -6,55 +6,47 @@ body{
 }
 
 #display{
-    border: 1px solid black;
+    border: 3px solid #121212;
     margin: 10px;
-    height: 100px;
+    height: 50px;
     width: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 12px;
+    font-family: Inter,sans-serif;
+    font-size: 1.2rem;
+    font-weight: 700;
 }
 
-/* CSS */
 button {
-  background-color: #FFFFFF;
-  border: 1px solid #222222;
-  border-radius: 8px;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: transparent 0 0 0 3px,rgba(18, 18, 18, .1) 0 6px 20px;
   box-sizing: border-box;
-  color: #222222;
+  color: #121212;
   cursor: pointer;
-  display: inline-block;
-  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 20px;
+  display: inline-flex;
+  flex: 1 1 auto;
+  font-family: Inter,sans-serif;
+  font-size: 1.2rem;
+  font-weight: 700;
+  justify-content: center;
+  line-height: 1;
   margin: 5px;
   outline: none;
-  padding: 13px 23px;
-  position: relative;
+  padding: 1rem 1.2rem;
   text-align: center;
   text-decoration: none;
-  touch-action: manipulation;
-  transition: box-shadow .2s,-ms-transform .1s,-webkit-transform .1s,transform .1s;
+  transition: box-shadow .2s,-webkit-box-shadow .2s;
+  white-space: nowrap;
+  border: 0;
   user-select: none;
   -webkit-user-select: none;
-  width: auto;
+  touch-action: manipulation;
 }
 
-button:focus-visible {
-  box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
-  transition: box-shadow .2s;
-}
-
-button:active {
-  background-color: #F7F7F7;
-  border-color: #000000;
-  transform: scale(.96);
-}
-
-button:disabled {
-  border-color: #DDDDDD;
-  color: #DDDDDD;
-  cursor: not-allowed;
-  opacity: 1;
+button:hover {
+  box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
 }
